clusters/my-cluster/apps/lern/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn-app-svc  
  namespace: lern
spec:
  selector:
    app: learn-app
  ports:
    - name: learn-app-lisner
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
