clusters/my-cluster/apps/lern/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lern-ingr
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  tls:
    - hosts:
      - komplikter.servehttp.com
      secretName: tlss-prod-secret
  ingressClassName: nginx
  rules:
    - host: komplikter.servehttp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learn-app-svc
                port:
                  number: 443
