clusters/my-cluster/apps/lern/base/oa2p.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        # - --provider=github
        # - --email-domain=*
        # - --upstream=file:///dev/null
        # - --http-address=0.0.0.0:4180

        # For Keycloak versions <17: --oidc-issuer-url=https://<keycloak host>/auth/realms/<your realm>
        - --provider=keycloak-oidc
        - --redirect-url=https://komplikter.servehttp.com/oauth2/callback
        - --oidc-issuer-url=https://komplikter-sub1.servehttp.com/realms/kuberkluster
        - --email-domain=*
        - --code-challenge-method=S256
        - --http-address=0.0.0.0:4180

        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: komplikter.servehttp.com
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - komplikter.servehttp.com
    secretName: tlss-prod-secret

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: external-auth-oauth2
spec:
  ingressClassName: nginx
  rules:
  - host: komplikter.servehttp.com
    http:
      paths:
      - path: /oauth2/callback
        pathType: Prefix
        backend:
          service:
            name: learn-app-svc
            port:
              number: 80
